2004-12-09  Lluis Sanchez Gual <lluis@novell.com>

	* TcpConnectionPool.cs: Access the socket stream through a
	BufferedStream.
	* TcpMessageIO.cs: Avoid ReadByte().
	* TcpServerChannel.cs: Access the socket stream through a
	BufferedStream. Abort the connection if an unknown message is received.
	All this fixes performance bug #70337.

2004-10-22  Lluis Sanchez Gual <lluis@ximian.com>

	* TcpClientChannel.cs: In CreateMessageSink, process the remote channel
	  data if the provided url does not have the expected format. This fixes
	  a regression from the fix for bug #66768 and fixes #68669.

2004-07-15  Lluis Sanchez Gual <lluis@novell.com>

	* TcpServerChannel.cs: Set channel name from the provided properties.
	  This fixes bug #61592.

2004-05-13  Lluis Sanchez Gual <lluis@ximian.com>

	* TcpChannel.cs: Made Init private.
	* TcpClientTransportSink.cs, TcpClientTransportSinkProvider.cs,
	  TcpServerTransportSink.cs: Made internal.

﻿2004-04-16  Lluis Sanchez Gual  <lluis@ximian.com>

	* TcpClientChannel.cs: Initialize the sink provider in the default
	  constructor.

﻿2004-03-04  Lluis Sanchez Gual  <lluis@ximian.com>

	* TcpServerChannel.cs: In the ProcessMessages() loop, moved the closing of
	  the stream to the finally block, so it is called if the thread is aborted.

﻿2004-02-27  Lluis Sanchez Gual  <lluis@ximian.com>

	* TcpClientTransportSink.cs: Set the RequestUri transport header before 
	  sending the request.

﻿2004-02-23  Lluis Sanchez Gual <lluis@ximian.com>

	* TcpClientTransportSink.cs: Release the connection after sending an
	  OneWay call. This fixes bug #54671.

2003-12-23  Lluis Sanchez Gual <lluis@ximian.com>

	* TcpServerChannel.cs: If useIpAddress and bindAddress are both specified,
	  set bindAddress as the host address for the client.

2003-12-19  Lluis Sanchez Gual <lluis@ximian.com>

	* TcpServerChannel.cs: Fixes in channel initialization.

2003-12-12  Lluis Sanchez Gual  <lluis@ximian.com>

	* TcpChannel.cs: Added null check.
